pom 修改